# synfig

./: dump-me.as  dump-sy.as  log.txt
synfig-core/src/synfig/: CMakeLists.txt  pen.h  surface.cpp  surface_etl.h  target_scanline.cpp
synfig-core/src/synfig/color/: CMakeLists.txt  color.cpp  color.h  colorblendingfunctions.h
synfig-core/src/synfig/rendering/: CMakeLists.txt  renderer.cpp
synfig-core/src/synfig/rendering/common/optimizer/: optimizersplit.cpp
synfig-core/src/synfig/rendering/common/task/: CMakeLists.txt  Makefile_insert  tasktile.cpp  tasktile.h
synfig-core/src/synfig/rendering/software/function/: fft.cpp
synfig-core/src/synfig/rendering/software/task/: CMakeLists.txt  Makefile_insert  tasktilesw.cpp
synfig-core/src/tool/: joblistprocessor.cpp
